# futou

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  catalogue.json  catalogue.json.sig  vercel.json
.github/workflows/: catalogue-update.yml  ci.yml
catalogue-generator/: Cargo.toml  README.md  providers-pinned.json
catalogue-generator/src/: main.rs  providers.rs
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: vars.css
docs/cli/: activate.md  catalogue.md  index.md  install.md
docs/guide/: architecture.md  building.md  getting-started.md  installation.md
docs/runtimes/: apache.md  deno.md  index.md  mariadb.md  nginx.md  nodejs.md  php.md  postgresql.md  python.md
futo-cli/: Cargo.toml
futo-cli/src/: main.rs  pipe_client.rs
futo-core/: Cargo.toml
futo-core/src/: lib.rs
futo-core/src/domain/: runtime.rs
futo-core/src/ports/: catalogue_source.rs  downloader.rs  extractor.rs  mod.rs  path_manager.rs  process_manager.rs  runtime_repo.rs  shim_manager.rs
futo-core/src/service/: activation_service.rs  catalogue_service.rs  env_service.rs  install_service.rs  mod.rs
futo-daemon/: Cargo.toml
futo-daemon/resources/: bundle.json  catalogue-public-key.hex
futo-daemon/src/: composition_root.rs  handler.rs  main.rs  operation_log.rs  pipe_server.rs  tray_manager.rs
futo-daemon/src/adapters/: aria2_downloader.rs  async_extractor.rs  fs_repository.rs  mod.rs  null_downloader.rs  path_manager_win.rs  process_manager_win.rs  remote_catalogue.rs  shim_manager_win.rs
futo-gui/: components.json  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
futo-gui/src/: App.tsx  index.css
futo-gui/src-tauri/: Cargo.toml  tauri.conf.json
futo-ipc/: Cargo.toml
futo-ipc/src/: catalogue.rs  error_codes.rs  lib.rs  messages.rs
llm/: 2026-07-11-changes.md  SYSTEM_MAP.md  codingstyle.md  lesson.md  lessons.md
llm/plans/: gui-daemon-startup-plan.md  security-catalogue-hardening-plan.md
(+23 files in other folders)
