[package]
name = "catalogue-generator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
chrono = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futou-ipc = { path = "../futo-ipc" }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
