[package]
name = "futou-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
futou-ipc = { version = "0.1.0", path = "../futo-ipc" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
