[package]
name = "futou-core"
version = "0.1.0"
edition = "2021"

[dependencies]
futou-ipc = { path = "../futo-ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tracing = "0.1"
